--- a/starter/app/src/main/res/values/attrs.xml
+++ b/starter/app/src/main/res/values/attrs.xml
@@ -3,5 +3,6 @@
     <declare-styleable name="LoadingButton">
         <attr name="textColor" format="color" />
         <attr name="arcColor" format="color" />
+        <attr name="textBackgroundColor" format="color" />
     </declare-styleable>
 </resources>
