--- a/starter/app/src/main/res/layout/content_detail.xml
+++ b/starter/app/src/main/res/layout/content_detail.xml
@@ -20,11 +20,12 @@
 
     <TextView
         android:id="@+id/label_filename_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/label_filename"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,10 +41,13 @@
 
     <TextView
         android:id="@+id/label_download_status_value"
-        android:layout_width="59dp"
+        android:layout_width="0dp"
         android:layout_height="23dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
-        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/label_download_status"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/label_filename_value"
         app:layout_constraintTop_toBottomOf="@+id/label_filename_value" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
