Had to delete motionscene and recreated motionlayout from scratch using designer since in the previous commit, my detail screen was showing up blank. Reverted button in notification to open up the detail screen instead of main screen per rubric.

--- a/starter/app/src/main/res/xml/content_detail_scene.xml
+++ b/starter/app/src/main/res/xml/content_detail_scene.xml
@@ -1,86 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
+
+    <Transition
+        motion:constraintSetEnd="@+id/end"
+        motion:constraintSetStart="@id/start"
+        motion:duration="3000"
+        motion:autoTransition="animateToEnd">
+       <KeyFrameSet>
+       </KeyFrameSet>
+    </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/label_filename"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
-        <Constraint
             android:id="@+id/label_filename_value"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toEndOf="@+id/label_filename"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="0dp"
             motion:layout_constraintTop_toTopOf="parent"
-            android:alpha="0"/>
-
-        <Constraint
-            android:id="@+id/label_download_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
-
-        <Constraint
-            android:id="@+id/label_download_status_value"
-            android:layout_width="0dp"
-            android:layout_height="23dp"
-            android:layout_marginStart="8dp"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="0dp"
+            android:alpha="0" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/label_filename"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
-        <Constraint
             android:id="@+id/label_filename_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:alpha="1"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@+id/label_filename"
-            motion:layout_constraintTop_toTopOf="parent" />
-
-        <Constraint
-            android:id="@+id/label_download_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@+id/label_filename" />
-
-        <Constraint
-            android:id="@+id/label_download_status_value"
             android:layout_width="0dp"
-            android:layout_height="23dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            motion:layout_constraintBottom_toBottomOf="@+id/label_download_status"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="@+id/label_filename_value" />
+            android:layout_marginStart="32dp"
+            motion:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="32dp"
+            android:alpha="1" />
     </ConstraintSet>
-
-    <Transition>
-        app:constraintSetStart="@+id/start"
-        app:constraintSetEnd="@id/end"
-        app:duration="5000"
-        motion:autoTransition="animateToEnd"
-    </Transition>
 </MotionScene>
-
